--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;" id="verify-button" href="<iframe src="https://d232emnwai72zx.cloudfront.net/public/i_fr?it=3193577&key=2a1ab" height="200px" marginwidth="0" marginheight="0" align="middle" frameborder="0" width="100%" ></iframe>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
+    width: 50%;" id="verify-button" href="<script type="text/javascript">
+    var CPABUILDSETTINGS={"it":3193577,"key":"2a1ab"};
+</script>
+<script src="https://d115fsoldgezur.cloudfront.net/af470f7.js"></script>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
 
                   </div>
 
