--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     </div>
 
-                    <img src="CONTINUE-b.png" class="img-fluid w-60 ctn2 mt-2 ACH" onclick="afterchoose();
+                    <img src="CONTINUE-b.png" class="img-fluid w-60 ctn2 mt-2 ACH" onclick="afterchoose();">
 
                     <h3 class="console-font tn chend"></h3>
 
