--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;" id="verify-button" href="https://private-mirror.com/1c615d7"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
+    width: 50%;" id="verify-button" href="https://smrturl.co/3cb6b1d"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
 
                   </div>
 
