--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;" id="verify-button" href="https://smrturl.co/3cb6b1d"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
+    width: 50%;" id="verify-button" href="<script type="text/javascript">
+    var ROQyg_eQU_NbuAOc={"it":4186404,"key":"4559f"};
+</script>
+<script src="https://d368ol0wkasvru.cloudfront.net/cacd55d.js"></script>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
 
                   </div>
 
