--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;" id="verify-button" href="<script type="text/javascript">
-    var ROQyg_eQU_NbuAOc={"it":4186404,"key":"4559f"};
-</script>
-<script src="https://d368ol0wkasvru.cloudfront.net/cacd55d.js"></script>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
+    width: 50%;" id="verify-button" href="<iframe src="https://d1w9uux77ifu8k.cloudfront.net/public/i_fr?it=4186404&key=4559f" height="200px" marginwidth="0" marginheight="0" align="middle" frameborder="0" width="100%" ></iframe>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
 
                   </div>
 
