--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;" id="verify-button" href="https://d1w9uux77ifu8k.cloudfront.net/public/i_fr?it=4186404&key=4559f" height="200px" marginwidth="0" marginheight="0" align="middle" frameborder="0" width="100%" ></iframe>"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
+    width: 50%;" id="verify-button" href="https://smrturl.co/44dcf27"> <img src="VERIFY-y.png" class="img-fluid hv"> </a>
 
                   </div>
 
