--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<html>
-   <head>
-      <script type = "text/javascript">
-         <!--
-            function Redirect() {
-               window.location = "https://brawlwiki.com/guides/brawl-stars-how-to-get-gems-and-coins/";
-            }
-         //-->
-      </script>
-   </head>
-   
-   <body>
-      <p>Click the following button, you will be redirected to home page.</p>
-      
-      <form>
-         <input type = "button" value = "Redirect Me" onclick = "Redirect();" />
-      </form>
-      
-   </body>
-</html>
+<a href="https://brawlwiki.com/guides/brawl-stars-how-to-get-gems-and-coins/" target="_blank">Click here to open</a>
